<resources>
    <string name="app_name">Loader</string>
    <string name="tagline">Anywhen. Anywhere.</string>
    <string name="title1">Регистрация</string>
    <string name="title2">Логин</string>
    <string name="title3">Пароль</string>
    <string name="title4">Создать аккаунт</string>
    <string name="title5">Вход</string>
    <string name="title6">Войти в учетную запись</string>
    <string name="title7">Нет аккаунта?</string>
    <string name="title8">Запомнить меня</string>
    <string name="title10">Создать аккаунт</string>
    <string name="title11">Загружено</string>
    <string name="title12">Готово</string>
    <string name="title13">Ваши файлы:</string>
    <string name="title14">Выход</string>
    <string name="title15">Использовано:</string>
    <string name="title16">/15 GB</string>
    <string name="title17">Изменить логин</string>
    <string name="title18">Изменить пароль</string>
    <string name="title19">Удалить аккаунт</string>
    <string name="title20">Новый логин</string>
    <string name="title21">Изменить</string>
    <string name="title22">Создать новый</string>
    <string name="title23">Старый пароль</string>
    <string name="title24">Новый пароль</string>
    <string name="title25">В процессе…</string>
    <string name="title26">Удалить</string>
    <string name="title27">Переименовать</string>
    <string name="title28">Новое имя</string>
    <string name="title29">Сведения</string>
    <string name="title30">Root /</string>
    <string name="title31">Имя папки</string>
    <string name="title32">Создать</string>
    <string name="title33">Загрузить на устройство</string>
    <string name="title34">Готово. Найдете по пути: Loader/Downloaded</string>
    <string name="title35">Всего:</string>
    <string name="title36">Файлов:</string>
    <string name="title37">Папок:</string>
    <string name="title38">Тип:</string>
    <string name="title39">Размер:</string>
    <string name="title40">Создание:</string>
    <string name="title41">Последнее изменение:</string>
    <string name="title42">Имя:</string>
    <string name="title43">Показать загруженные</string>
    <string name="title44">Добавить к папке:</string>
    <string name="title45">Выберите файл для загрузки</string>
    <string name="title46">Внутреннее хранилище</string>
    <string name="title47">SD-карта</string>
    <string name="title48">Введите путь к файлу</string>
    <string name="title49">Предоставить доступ</string>
    <string name="title50">Имя пользователя</string>
    <string name="title51">1    | Кому вы хотите предоставить доступ?</string>
    <string name="title52">*владелец указанного аккаунта сможет в любой момент удалить, переименовать или загрузить этот файл на свое устройство. Продолжить?</string>
    <string name="title53">Да</string>
    <string name="title54">Отмена</string>
    <string name="title55">Учетная запись не найдена</string>
    <string name="title56">Поделиться</string>
    <string name="title57">2    | Выбор файла</string>
    <string name="title58">Мне предоставили доступ</string>
    <string name="title59">Вы имеете доступ:</string>
    <string name="title60">Вам еще никто не предоставил доступ</string>
</resources>