<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/user"
        android:layout_width="311dp"
        android:layout_height="44dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/title50"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title51"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/user"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="234dp"
        android:layout_height="97dp"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title52"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/continues"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continues"
        android:layout_width="73dp"
        android:layout_height="36dp"
        android:layout_marginStart="93dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/style10"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title53"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/denied"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="280dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title54"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/continues" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title55"
        android:textColor="#FF0303"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/continues"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>