<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E202B"
    tools:context=".MainInfo">

    <TextView
        android:id="@+id/typeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-condensed"
        android:rotation="0"
        android:rotationX="0"
        android:text="@string/title38"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/sizeView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-condensed"
        android:rotation="0"
        android:rotationX="0"
        android:text="@string/title42"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/typeView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:rotation="0"
        android:rotationX="0"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/nameValue" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:rotation="0"
        android:rotationX="0"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sizeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:rotation="0"
        android:rotationX="0"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/typeValue" />

    <TextView
        android:id="@+id/dateOfCreateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:rotation="0"
        android:rotationX="0"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/sizeValue" />

    <TextView
        android:id="@+id/dateOfChangeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:rotation="0"
        android:rotationX="0"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/dateOfCreateValue" />

    <TextView
        android:id="@+id/sizeView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title39"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/dateOfCreateView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dateOfCreateView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title40"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/dateOfChangeView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dateOfChangeView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title41"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfCreateView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="2dp"
        android:layout_height="170dp"
        android:layout_marginStart="7dp"
        android:background="#FFFFFF"
        android:src="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toEndOf="@+id/dateOfChangeView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="28dp"
        android:layout_height="19dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="103dp"
        app:layout_constraintStart_toEndOf="@+id/dateOfCreateValue"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>