<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C90343A1">

    <ImageView
        android:id="@+id/vis"
        android:layout_width="4dp"
        android:layout_height="33dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="9dp"
        android:background="#FF0000"
        app:layout_constraintStart_toEndOf="@+id/hide"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        app:srcCompat="?attr/selectableItemBackgroundBorderless" />

    <ImageView
        android:id="@+id/hide"
        android:layout_width="44dp"
        android:layout_height="33dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="9dp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/change2"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        app:srcCompat="@drawable/hide" />

    <ImageView
        android:id="@+id/show"
        android:layout_width="44dp"
        android:layout_height="33dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="9dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/change2"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        app:srcCompat="@drawable/show" />

    <Button
        android:id="@+id/change2"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style2"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title21"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="263dp"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_style"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789._"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/title23"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textColorHighlight="#C0E4FF"
        android:textColorLink="#C0E4FF"
        android:textCursorDrawable="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="263dp"
        android:layout_height="36dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/input_style"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789._"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/title24"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textColorHighlight="#C0E4FF"
        android:textColorLink="#C0E4FF"
        android:textCursorDrawable="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>